feat: 9 hole 18 hole front or back 9
